SERVER-47994 Fix for numerical overflow in GeoHash